# new_pyproject

./: pyproject.toml  setup.py
new_pyproject/: __init__.py
new_pyproject/templates/: pre-commit.sh
tests/: test_new_pyproject.py
