[tool.black]
line-length = 79

[tool.poetry]
name = "new_pyproject"
version = "0.1.0"
description = "automation for my personal projects"
authors = ["Aaron Christianson <ninjaaron@gmail.com>"]
license = "MPL-2.0"
include = [
  "new_pyproject/.gitignore",
  "new_pyproject/templates/*"
]

[tool.poetry.dependencies]
python = "^3.5"
lazycli = "^0.2.2"
easyproc = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
